Fix: Contract Document clean up

--- a/lib/templates/contract.html
+++ b/lib/templates/contract.html
@@ -828,6 +828,7 @@
             </div>
         </div>
 
+        <!-- {% comment %}
         <aside class="side-meta" aria-hidden="true">
             <div class="qr">
                 <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https://kazipert.com/verify/{{DOCUMENT_ID}}"
@@ -836,7 +837,7 @@
             </div>
         </aside>
 
-        <img class="stamp" src="https://i.imgur.com/5bXq7yA.png" alt="Official Stamp" />
+         <img class="stamp" src="https://i.imgur.com/5bXq7yA.png" alt="Official Stamp" /> {% endcomment %} -->
 
         <footer class="footer">
             KAZIPERT SYSTEM • Official Employment Contract • Document ID: <strong>{{DOCUMENT_ID}}</strong> • Issued:
